fixed footer z-index issue

--- a/JJ-theme/css/styles.css
+++ b/JJ-theme/css/styles.css
@@ -577,6 +577,7 @@ a .nextItem:hover span.point {
 	top: 0px;
 	left: 0px;
 	background-color: transparent;
+	z-index: -1;
 }
 
 .footer a {
